fix btn code - white space normal

--- a/css/custom.styl
+++ b/css/custom.styl
@@ -120,7 +120,12 @@
   
 @media screen and (max-width: 768px)
   .beefy-holder .subPageBtn
-    width 50%
+    // width 50% -- using white space: normal instead
+    font-size 18px
+    white-space normal
+  .service
+    font-size 20px
+    margin-bottom 24px
 
 /* Sidebar  
 ----------------------------------------- */
